Started on the main page. Tried some js, made some buttons.

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -3,15 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sälj din Säl!</title>
     <link rel="stylesheet" href="css/css.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+    <title>Sälj din Säl!</title>
 </head>
 <body>
     <div class="grid">
     <header>
         <h1>Sälj din Säl!</h1>
     </header>
-    
+    <main>
+    <div class="slideshow">
+        <img src="img/Awkward-Seal.jpg" alt="Seal-of-Fortune" title="Buy Me!" class="slide">
+        <img src="img/sealsnow.jpg" alt="Snuw" class="slide">
+        <img src="img/nom.jpg" alt="Omnomnom!" class="slide">
+        <button onclick="slideshow()">Kellmepless</button>
+    </div>
+    <a href="#"><button>Sälj din Säl!</button></a>
+    <a href="#"><button>Information</button></a>
+    <a href="#"><button>Glada Säljare</button></a>
+</main>
+<script> src="js/slideshow.js"</script>
     </div>
 </body>
 </html>
