Fixed the sell site, the information site and started with the sellers site.

--- a/site/public/faq.html
+++ b/site/public/faq.html
@@ -14,9 +14,17 @@
         <h1>Sälj din Säl!</h1>
         <a href="sell.html"><button class="icon">SÄLj</button></a>
     </header>
-    <main class="sell">
-    <p>Tack för att du har sålt din säl! Våra experter kommer att hämta den inom tre år.</p>
-    <img src="img/nom.jpg" alt="Grateful Seal" title="Tank yu!">
+    <main>
+    <h3>Vad finns det för fördelar med att sälja min säl?</h3>
+    <ul>
+        <li>Du behöver inte längre ta hand om den.</li>
+        <li>Du får betalt för den!</li>
+        <li>Säkert något mer.</li>
+    </ul>
+    <h3>Vad kommer att hända med min säl?</h3>
+        <p>Din säl kommer att tas hand om, det är allt du behöver veta.</p>
+    <h3>Kan jag få tillbaka min säl?</h3>
+        <p>Nej, när du väl har sålt den är den vår.</p>
 </main>
     </div>
 </body>
