--- a/site/public/sell.html
+++ b/site/public/sell.html
@@ -10,10 +10,18 @@
 <body>
     <div class="grid">
     <header>
+        <a href="index.html"><button class="icon">HEM</button></a>
         <h1>Sälj din Säl!</h1>
+        <a href="sell.html"><button class="icon">SÄLj</button></a>
     </header>
     <main class="sell">
-    <input type="text">
+    <input type="text" placeholder="Förnamn">
+    <input type="text" placeholder="Efternamn">
+    <input type="text" placeholder="E-Mail">
+    <input type="text" placeholder="Adress">
+    <input type="checkbox">
+    <a href="faq.html">Jag vet vad det innebär att sälja min säl.</a>
+    <a href="sold.html"><button>Sälj din Säl!</button></a>
 </main>
     </div>
 </body>
