--- a/site/public/sellers.html
+++ b/site/public/sellers.html
@@ -10,9 +10,16 @@
 <body>
     <div class="grid">
     <header>
+        <a href="index.html"><button class="icon">HEM</button></a>
         <h1>Sälj din Säl!</h1>
+        <a href="sell.html"><button class="icon">SÄLj</button></a>
     </header>
-    
+    <main class="sellers">
+    <img src="img/Awkward-Seal.jpg" alt="">
+    <img src="img/nom.jpg" alt="">
+    <img src="img/sealsnow.jpg" alt="">
+    <img src="img/nom.jpg" alt="">
+</main>
     </div>
 </body>
 </html>
