Added and implemented a spritesheet.

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -10,14 +10,14 @@
 <body>
     <div class="grid">
     <header>
-        <a href="index.html"><button class="icon">HEM</button></a>
+        <a href="index.html"></a>
         <h1>Sälj din Säl!</h1>
-        <a href="sell.html"><button class="icon">SÄLj</button></a>
+        <a href="sell.html"></a>
     </header>
     <main>
     <div class="slideshow">
-        <h2 class="arrowleft"><button class="icon" onclick="changeImg(-1)">&#10094;</button></h2>
-        <h2 class="arrowright"><button class="icon" onclick="changeImg(1)">&#10095;</button></h2>
+        <button class="icon, arrowleft" onclick="changeImg(-1)"></button>
+        <button class="icon, arrowright" onclick="changeImg(1)"></button>
         <img name="slide" width="360">
     </div>
     <a href="sell.html"><button>Sälj din Säl!</button></a>
