--- a/site/public/faq.html
+++ b/site/public/faq.html
@@ -10,9 +10,9 @@
 <body>
     <div class="grid">
     <header>
-        <a href="index.html"><button class="icon">HEM</button></a>
+        <a href="index.html"></a>
         <h1>Sälj din Säl!</h1>
-        <a href="sell.html"><button class="icon">SÄLj</button></a>
+        <a href="sell.html"></a>
     </header>
     <main>
     <h3>Vad finns det för fördelar med att sälja min säl?</h3>
