Added mediaqueries and a photoshoped image.

--- a/site/public/sellers.html
+++ b/site/public/sellers.html
@@ -15,10 +15,10 @@
         <a href="sell.html"></a>
     </header>
     <main class="sellers">
-    <img src="img/Awkward-Seal.jpg" alt="">
+    <img src="img/sealler1.jpg" alt="">
     <img src="img/nom.jpg" alt="">
     <img src="img/sealsnow.jpg" alt="">
-    <img src="img/nom.jpg" alt="">
+    <img src="img/Awkward-Seal.jpg" alt="">
 </main>
     </div>
 </body>
