--- a/site/public/index.html
+++ b/site/public/index.html
@@ -22,7 +22,7 @@
     </div>
     <a href="sell.html"><button>Sälj din Säl!</button></a>
     <a href="faq.html"><button>Information</button></a>
-    <a href="sellers.html"><button>Glada Säljare</button></a>
+    <a href="sellers.html"><button>Glada SÄLjare</button></a>
 </main>
 
 <script>
@@ -32,6 +32,7 @@
     images[0] = 'img/Awkward-Seal.jpg';
     images[1] = 'img/sealsnow.jpg';
     images[2] = 'img/nom.jpg';
+    images[3] = 'img/sealler1.jpg';
 
     function changeImg(n){
         if(i > images.length-1){
