Added an animation to the sellers site.

--- a/site/public/sellers.html
+++ b/site/public/sellers.html
@@ -15,11 +15,14 @@
         <a href="sell.html"></a>
     </header>
     <main class="sellers">
-    <img src="img/sealler1.jpg" alt="">
-    <img src="img/nom.jpg" alt="">
-    <img src="img/sealsnow.jpg" alt="">
-    <img src="img/Awkward-Seal.jpg" alt="">
-</main>
+    <div class="darken" onclick="toggleMenu()"></div>
+    <div class="details" onclick="toggleMenu()"></div>
+    <img src="img/sealler1.jpg" onclick="toggleMenu()">
+    <img src="img/nom.jpg">
+    <img src="img/sealsnow.jpg">
+    <img src="img/Awkward-Seal.jpg">
+</main>
+<script src="js/details.js"></script>
     </div>
 </body>
 </html>
