Added mediaqueries and another image.

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -14,6 +14,7 @@
         <h1>Sälj din Säl!</h1>
         <a href="sell.html"></a>
     </header>
+    <div class="ad1"></div>
     <main>
     <div class="slideshow">
         <button class="icon, arrowleft" onclick="changeImg(-1)"></button>
@@ -33,6 +34,7 @@
     images[1] = 'img/sealsnow.jpg';
     images[2] = 'img/nom.jpg';
     images[3] = 'img/sealler1.jpg';
+    images[4] = 'img/cash_overflow.jpg';
 
     function changeImg(n){
         if(i > images.length-1){
@@ -56,6 +58,7 @@
     window.onload = changeImg;
 
 </script>
+    <div class="ad2"></div>
     </div>
 </body>
 </html>
