--- a/site/public/faq.html
+++ b/site/public/faq.html
@@ -14,6 +14,7 @@
         <h1>Sälj din Säl!</h1>
         <a href="sell.html"></a>
     </header>
+    <div class="ad1"></div>
     <main class="faq">
     <h3>Vad finns det för fördelar med att sälja min säl?</h3>
     <ul>
@@ -26,6 +27,7 @@
     <h3>Kan jag få tillbaka min säl?</h3>
         <p>Nej, när du väl har sålt den är den vår.</p>
 </main>
+    <div class="ad2"></div>
     </div>
 </body>
 </html>
