--- a/site/public/sell.html
+++ b/site/public/sell.html
@@ -14,6 +14,7 @@
         <h1>Sälj din Säl!</h1>
         <a href="sell.html"></a>
     </header>
+    <div class="ad1"></div>
     <main class="sell">
     <input type="text" placeholder="Förnamn">
     <input type="text" placeholder="Efternamn">
@@ -23,6 +24,7 @@
     <a href="faq.html">Jag vet vad det innebär att sälja min säl.</a>
     <a href="sold.html"><button>Sälj din Säl!</button></a>
 </main>
+    <div class="ad2"></div>
     </div>
 </body>
 </html>
