--- a/site/public/sellers.html
+++ b/site/public/sellers.html
@@ -14,6 +14,7 @@
         <h1>Sälj din Säl!</h1>
         <a href="sell.html"></a>
     </header>
+    <div class="ad1"></div>
     <main class="sellers">
     <div class="darken" onclick="toggleMenu()"></div>
     <div class="details" onclick="toggleMenu()"></div>
@@ -23,6 +24,7 @@
     <img src="img/Awkward-Seal.jpg">
 </main>
 <script src="js/details.js"></script>
+    <div class="ad2"></div>
     </div>
 </body>
 </html>
