--- a/site/public/faq.html
+++ b/site/public/faq.html
@@ -14,7 +14,9 @@
         <h1>Sälj din Säl!</h1>
         <a href="sell.html"></a>
     </header>
-    <div class="ad1"></div>
+    <div class="ad1">
+        
+    </div>
     <main class="faq">
     <h3>Vad finns det för fördelar med att sälja min säl?</h3>
     <ul>
