--- a/site/public/index.html
+++ b/site/public/index.html
@@ -14,7 +14,9 @@
         <h1>Sälj din Säl!</h1>
         <a href="sell.html"></a>
     </header>
-    <div class="ad1"></div>
+    <div class="ad1">
+        
+    </div>
     <main>
     <div class="slideshow">
         <button class="icon, arrowleft" onclick="changeImg(-1)"></button>
