--- a/site/public/sellers.html
+++ b/site/public/sellers.html
@@ -14,7 +14,9 @@
         <h1>Sälj din Säl!</h1>
         <a href="sell.html"></a>
     </header>
-    <div class="ad1"></div>
+    <div class="ad1">
+        
+    </div>
     <main class="sellers">
     <div class="darken" onclick="toggleMenu()"></div>
     <div class="details" onclick="toggleMenu()"></div>
