--- a/site/public/sold.html
+++ b/site/public/sold.html
@@ -14,7 +14,9 @@
         <h1>Sälj din Säl!</h1>
         <a href="sell.html"></a>
     </header>
-    <div class="ad1"></div>
+    <div class="ad1">
+        
+    </div>
     <main class="sell">
     <p>Tack för att du har sålt din säl! Våra experter kommer att hämta den inom tre år.</p>
     <img src="img/nom.jpg" alt="Grateful Seal" title="Tank yu!">
